--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content fade-in">
-                    <h1>Your Name</h1>
+                    <h1>Ling Li 李玲</h1>
                     <p class="subtitle">PhD Student & Technology Innovation Researcher</p>
                     <p class="description">
                         Exploring the intersection of technology and innovation, with a passion for 
