--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">YourName.dev</div>
+            <div class="logo">Ling Li 李玲</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
