--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         }
 
         .contact::before {
-            content: '';<!DOCTYPE html>
+                content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("data:image/svg+xml...");
+    pointer-events: none;
+}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
