--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 /* Contact Section */
-        .contact {
+<head>
+    <style>
+            .contact {
             background-image: 
                 radial-gradient(circle at 20% 80%, rgba(59, 130, 246, 0.1) 0%, transparent 50%),
                 radial-gradient(circle at 80% 20%, rgba(168, 85, 247, 0.08) 0%, transparent 50%),
