--- a/index.html
+++ b/index.html
@@ -855,9 +855,8 @@
                             <div class="experience-period">2024 - Present</div>
                         </div>
                         <div class="experience-description">
-                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on [Science, Technology and Innovation Policy, Innovation Ecosystems, AI Ethics and Governance, and EDI in AI Entrepreneurship]. 
-                            Leading multiple research projects, publishing in top-tier conferences, and collaborating 
-                            with industry partners to translate research into practical applications.
+                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on [Science, Technology and Innovation Policy, AI and Quantum Technology Innovation and Entrepreneurship] with quantitative methods, including machine learning and network analysis. 
+                            Leading multiple research projects, publishing in top-tier conferences, and collaborating with industry partners to translate research into practical applications.
                         </div>
                     </div>
 
