--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     <div class="about-text">
                         <h3>Innovation Through Technology</h3>
                         <p>
-                            I'm a second-year PhD student specializing in Administration - Management, Strategy and Entrepreneurship, with research areas in (emerging) technology innovation and entrepreneurship, currently pursuing my doctoral 
+                            I'm a second-year PhD student specializing in //Administration - Management, Strategy and Entrepreneurship//, with research areas in (emerging) technology innovation and entrepreneurship, currently pursuing my doctoral 
                             degree at [HEC Montréal], taking joint courses and research at McGill University. My research focuses on understanding how emerging 
                             technologies can drive innovation and create meaningful impact across industries.
                         </p>
