--- a/index.html
+++ b/index.html
@@ -824,12 +824,12 @@
                     <div class="about-text">
                         <h3>Innovation Through Technology</h3>
                         <p>
-                            I'm a second-year PhD student specializing in //Administration - Management, Strategy and Entrepreneurship//, with research areas in (emerging) technology innovation and entrepreneurship, currently pursuing my doctoral 
-                            degree at [HEC Montréal], taking joint courses and research at McGill University. My research focuses on understanding how emerging 
+                            I'm a second-year PhD student specializing in **Administration - Management, Strategy and Entrepreneurship**, with research areas in **(emerging) technology innovation and entrepreneurship**, currently pursuing my doctoral 
+                            degree at **HEC Montréal**, taking joint courses and research at **McGill University**. My research focuses on understanding how emerging 
                             technologies can drive innovation and create meaningful impact across industries.
                         </p>
                         <p>
-                            With a strong background in [Economics and Management], I bring both academic rigor and practical 
+                            With a strong background in **Economics and Management**, I bring both academic rigor and practical 
                             experience to my research. I'm passionate about bridging the gap between theoretical 
                             knowledge and real-world applications.
                         </p>
@@ -855,7 +855,7 @@
                             <div class="experience-period">2024 - Present</div>
                         </div>
                         <div class="experience-description">
-                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on [Science, Technology and Innovation Policy, AI and Quantum Technology Innovation and Entrepreneurship] with quantitative methods, including machine learning and network analysis. 
+                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on **Science, Technology and Innovation Policy** and **AI and Quantum Technology Innovation and Entrepreneurship** with **quantitative** methods, including **machine learning** and **network analysis**. 
                             Leading multiple research projects, publishing in top-tier conferences, and collaborating with industry partners to translate research into practical applications.
                         </div>
                     </div>
