--- a/index.html
+++ b/index.html
@@ -824,12 +824,12 @@
                     <div class="about-text">
                         <h3>Innovation Through Technology</h3>
                         <p>
-                            I'm a second-year PhD student specializing in **Administration - Management, Strategy and Entrepreneurship**, with research areas in **(emerging) technology innovation and entrepreneurship**, currently pursuing my doctoral 
-                            degree at **HEC Montréal**, taking joint courses and research at **McGill University**. My research focuses on understanding how emerging 
+                            I'm a second-year PhD student specializing in <strong>Administration - Management, Strategy and Entrepreneurship</strong>, with research areas in <strong>(emerging) technology innovation and entrepreneurship</strong>, currently pursuing my doctoral 
+                            degree at <strong>HEC Montréal</strong>, taking joint courses and research at <strong>McGill University</strong>. My research focuses on understanding how emerging 
                             technologies can drive innovation and create meaningful impact across industries.
                         </p>
                         <p>
-                            With a strong background in **Economics and Management**, I bring both academic rigor and practical 
+                            With a strong background in <strong>Economics and Management</strong>, I bring both academic rigor and practical 
                             experience to my research. I'm passionate about bridging the gap between theoretical 
                             knowledge and real-world applications.
                         </p>
