--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                             <div class="experience-period">2024 - Present</div>
                         </div>
                         <div class="experience-description">
-                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on **Science, Technology and Innovation Policy** and **AI and Quantum Technology Innovation and Entrepreneurship** with **quantitative** methods, including **machine learning** and **network analysis**. 
+                            Conducting cutting-edge research in technology innovation and entrepreneurship, focusing on <strong>Science, Technology and Innovation Policy</strong> and <strong>AI and Quantum Technology Innovation and Entrepreneurship</strong> with <strong>quantitative</strong> methods, including <strong>machine learning</strong> and <strong>network analysis</strong>. 
                             Leading multiple research projects, publishing in top-tier conferences, and collaborating with industry partners to translate research into practical applications.
                         </div>
                     </div>
